Included build script