@@ -1,28 +1,27 @@
-package org.betriebssysteme.tcp;
+package org.betriebssysteme.UDS;
 
 import org.betriebssysteme.IPCBase;
 import org.betriebssysteme.StreamGobbler;
 
 import java.io.IOException;
-import java.util.concurrent.TimeUnit;
+import java.nio.file.Path;
 
-public class TCP extends IPCBase {
+public class UDS extends IPCBase {
     @Override
-    public void runBenchmark(int[] packetSizes, int iterations, long TOTAL_DATA_SIZE) throws IOException, InterruptedException {
-
-        compileServerAndClient(); // Compile Server and Client
-
+    public void runBenchmark(int[] packetSizes, int iterations, long TOTAL_DATA_SIZE, Path execPath) throws IOException, InterruptedException {
         for (int packetSize : packetSizes) {
             double totalLatencySeconds = 0;
             double totalMessagesPerSecond = 0;
             double totalThroughputMBps = 0;
+            double totalMinLatency = 0;
+            double totalMaxLatency = 0;
 
             for (int i = 0; i < iterations; i++) {
 
                 // Start Server
-                Process serverProcess = startServerProcess();
-//                StreamGobbler outputGobbler = new StreamGobbler(serverProcess.getInputStream(), "OUTPUT_SERVER");
-//                outputGobbler.start();
+                Process serverProcess = startServerProcess(packetSize, TOTAL_DATA_SIZE, execPath);
+                StreamGobbler outputGobbler = new StreamGobbler(serverProcess.getInputStream(), "OUTPUT_SERVER");
+                outputGobbler.start();
 
                 Thread.sleep(250);
 
@@ -30,9 +29,9 @@ public class TCP extends IPCBase {
                 long startTime = System.nanoTime();
 
                 // Start Client
-                Process clientProcess = startClientProcess(packetSize, TOTAL_DATA_SIZE);
-//                StreamGobbler clientOutput = new StreamGobbler(clientProcess.getInputStream(), "OUTPUT_CLIENT");
-//                clientOutput.start();
+                Process clientProcess = startClientProcess(packetSize, TOTAL_DATA_SIZE, execPath);
+                StreamGobbler clientOutput = new StreamGobbler(clientProcess.getInputStream(), "OUTPUT_CLIENT");
+                clientOutput.start();
 
                 // Wait for Client to finish
                 clientProcess.waitFor();
@@ -44,6 +43,10 @@ public class TCP extends IPCBase {
                 // Destroy Client and Server Process
                 serverProcess.destroy();
                 clientProcess.destroy();
+
+                // Extrahieren der Minimale und Maximale Latenz aus dem Server Gobbler
+                double iterationMinLatency = outputGobbler.getMinLatency();
+                double iterationMaxLatency = outputGobbler.getMaxLatency();
 
                 // Berechnung der Latenz
                 double latencySeconds = (endTime - startTime) / 1e9;
@@ -58,6 +61,8 @@ public class TCP extends IPCBase {
                 totalLatencySeconds += latencySeconds;
                 totalMessagesPerSecond += messagesPerSecond;
                 totalThroughputMBps += throughputMBps;
+                totalMinLatency += iterationMinLatency;
+                totalMaxLatency += iterationMaxLatency;
             }
 
             // Durchschnittliche Latenz über alle Iterationen
@@ -69,36 +74,33 @@ public class TCP extends IPCBase {
             // Durchschnittlicher Durchsatz über alle Iterationen
             double avgThroughputMBps = totalThroughputMBps / iterations;
 
+            // Durchschnittliche Latenz der Packete
+            double avgMinLatency = totalMinLatency / iterations;
+            double avgMaxLatency = totalMaxLatency / iterations;
+
             // Ausgabe der Ergebnisse für die aktuelle Paketgröße
-            System.out.println("TCP-Socket");
             System.out.println("Packet Size: " + packetSize + ", Iterations: " + iterations + ", Total Data sent: " + TOTAL_DATA_SIZE / (1024 * 1024) + " MB");
-            System.out.println("Durchschnittliche Latenz: " + avgLatencySeconds + " Sekunden für " + TOTAL_DATA_SIZE / (1024 * 1024) + " MB");
+            System.out.println("Durchschnittliche Gesamtdauer: " + avgLatencySeconds + " Sekunden für " + TOTAL_DATA_SIZE / (1024 * 1024) + " MB");
             System.out.println("Durchschnittliche Nachrichten pro Sekunde (NPS): " + avgMessagesPerSecond);
             System.out.println("Durchschnittlicher Durchsatz: " + avgThroughputMBps + " MB/s");
+            System.out.println("Durchschnittliche Minimale Latenz: " + avgMinLatency + " ms");
+            System.out.println("Durchschnittliche Maximale Latenz: " + avgMaxLatency + " ms");
             System.out.println("--------------------------------------------");
 
-            toCSV("TCP", packetSize, iterations, TOTAL_DATA_SIZE / (1024 * 1024), avgLatencySeconds, avgMessagesPerSecond, avgThroughputMBps);
+            toCSV("Unix Domain Socket", packetSize, iterations, TOTAL_DATA_SIZE / (1024 * 1024), avgLatencySeconds, avgMessagesPerSecond, avgThroughputMBps, avgMinLatency, avgMaxLatency);
 
         }
-
     }
 
-    private Process startClientProcess(int packetSize, long TOTAL_DATA_SIZE) throws IOException {
-        return Runtime.getRuntime().exec("java -cp src/main/java org.betriebssysteme.tcp.Client " + packetSize + " " + TOTAL_DATA_SIZE);
+    private Process startClientProcess(int packetSize, long TOTAL_DATA_SIZE, Path execPath) throws IOException {
+        ProcessBuilder processBuilder = new ProcessBuilder("java", "-jar", execPath.toString(), String.valueOf(TOTAL_DATA_SIZE), String.valueOf(packetSize), "uds", "c");
+        Process process = processBuilder.start();
+        return process;
     }
 
-    private Process startServerProcess() throws IOException {
-        return Runtime.getRuntime().exec("java -cp src/main/java org.betriebssysteme.tcp.Server");
-    }
-
-    @Override
-    protected void compileServerAndClient() throws IOException, InterruptedException {
-        Process compileServer = Runtime.getRuntime().exec("javac -cp src src/main/java/org/betriebssysteme/tcp/Server.java");
-        compileServer.waitFor();
-        compileServer.destroy();
-
-        Process compileClient = Runtime.getRuntime().exec("javac -cp src src/main/java/org/betriebssysteme/tcp/Client.java");
-        compileClient.waitFor();
-        compileClient.destroy();
+    private Process startServerProcess(int packetSize, long TOTAL_DATA_SIZE, Path execPath) throws IOException {
+        ProcessBuilder processBuilder = new ProcessBuilder("java", "-jar", execPath.toString(), String.valueOf(TOTAL_DATA_SIZE), String.valueOf(packetSize), "uds", "s");
+        Process process = processBuilder.start();
+        return process;
     }
 }
